--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   time_pickerr: ^1.0.6
+  flutter_spinkit: ^5.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
